Outliner: show_active doesn't expand armature to show active bone #71844

Closed
opened 2019-11-24 08:53:11 +01:00 by Stanislav Blinov · 14 comments

Blender Version
Broken: 2.81, 2.82 (ba1e9ae473)
Worked: 2.80

Short description of error
When the Armature is collapsed in outliner, pressing numpad . to show active doesn't expand armature data block, so doesn't show active. In edit mode, it will expand the Armature object, but only the object. In pose mode, it doesn't expand even that.

Exact steps for others to reproduce the error

  1. Create an armature
  2. Switch to edit mode and add a few bones, select one of them
  3. Hover over the Outliner, make sure the Armature is collapsed, and press numpad period.

Armature object will expand, but not armature data.

  1. Collapse Armature object
  2. Switch to Pose mode
  3. Hover over the Outliner and press numpad period.

Nothing will be expanded at all.

**Blender Version** Broken: 2.81, 2.82 (ba1e9ae4733a) Worked: 2.80 **Short description of error** When the Armature is collapsed in outliner, pressing numpad . to show active doesn't expand armature data block, so doesn't show active. In edit mode, it will expand the Armature object, but only the object. In pose mode, it doesn't expand even that. **Exact steps for others to reproduce the error** 1. Create an armature 2. Switch to edit mode and add a few bones, select one of them 3. Hover over the Outliner, make sure the Armature is collapsed, and press numpad period. Armature object will expand, but not armature data. 4. Collapse Armature object 5. Switch to Pose mode 6. Hover over the Outliner and press numpad period. Nothing will be expanded at all.

Added subscriber: @Stan_Pancakes

Added subscriber: @Stan_Pancakes

#72046 was marked as duplicate of this issue

#72046 was marked as duplicate of this issue

Added subscriber: @Kony

Added subscriber: @Kony

Can confirm on 2.81 official release.

Can confirm on 2.81 official release.

Added subscriber: @LucasVeber

Added subscriber: @LucasVeber

Added subscriber: @hadrien

Added subscriber: @hadrien

Added subscriber: @mano-wii

Added subscriber: @mano-wii

In fact the OUTLINER_OT_show_active operator is not expanding the tree.

In fact the `OUTLINER_OT_show_active` operator is not expanding the tree.

Added subscriber: @Addison

Added subscriber: @Addison

Removed subscriber: @Addison

Removed subscriber: @Addison

Added subscriber: @Addison

Added subscriber: @Addison
Philipp Oeser self-assigned this 2019-11-29 15:09:01 +01:00
Member

Added subscribers: @Voha, @lichtwerk

Added subscribers: @Voha, @lichtwerk

This issue was referenced by 96f9334857

This issue was referenced by 96f9334857753acee58c0ff52d4de72072d99594
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71844
No description provided.